@@ -9,7 +9,6 @@ badRef.json                                  3          0     0
 faux-buggy-schemas.json                      2          0     0
 format-date-time.json                        4          0     0
 format-date.json                             1          0     0
-format-duration.json                         9          0     0
 format-ipv4.json                             4          0     0
 format-relative-json-pointer.json            7          0     0
 format-time.json                            13          0     0
@@ -25,4 +24,4 @@ short-circuit.json                          16          0     0
 unknownKeyword.json                          8          0     0
 vocabulary.json                              3          0     0
 ---------------------------------------------------------------
-TOTAL                                      768          0     0
+TOTAL                                      759          0     0
