@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - removed duration and uuid formats for draft7 (they were not
+            defined until the next spec version)
 
 0.570     2023-09-02 20:42:03Z
           - small performance improvements to 'date-time' and 'date' format
